added some comments

--- a/pc-seg-clean.ipynb
+++ b/pc-seg-clean.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,9 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# adding stuff to the ground truth file so we can use read_write_model.read_points3D_text to open it\\ncount = 0\\nwith open(\\'datasets/South-Building/ground_truth.txt\\') as fp:\\n    Lines = fp.readlines()\\n    for line in Lines:\\n        Lines[count] = f\"{count} {Lines[count][:-1]} 0.0\\n\"\\n        count += 1\\n\\n    with open(\\'datasets/South-Building/ground_truth_adjusted.txt\\', \\'w\\') as fp:\\n        fp.writelines(Lines)\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "# adding stuff to the ground truth file so we can use read_write_model.read_points3D_text to open it\n",
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is optional to test if everything went well"
+    "You can [skip](#check_accuracy) this step. It is optional to test if everything went well"
    ]
   },
   {
@@ -532,12 +534,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check accuracy of pointcloud"
+    "### Check accuracy of pointcloud\n",
+    "<a id='check_accuracy'></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,8 +605,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we run the pointcloud segmentation for the first time without knn and check its accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -614,27 +624,49 @@
       "creating segmented pointcloud...\n",
       "file 'South-Building_k1' written\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8933365614827966"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_against_ground_truth(knn(1))"
+    "points3D_segmented = knn(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Accuracy: {int(round(check_against_ground_truth(points3D_segmented), 2)*100)}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also check the accuracy of each label."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tree': 0.8072696534234995, 'building': 0.9729930721358957, 'signboard': 0.19594594594594594, 'railing': 0.12101910828025478, 'ashbin': 0.0, 'sidewalk': 0.6031331592689295, 'streetlight': 0.5063829787234042, 'stairway': 0.6606786427145709, 'person': 0.7916666666666666}\n"
+     ]
+    }
+   ],
    "source": [
     "print(check_against_ground_truth_per_label(points3D_segmented))"
    ]
@@ -648,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,6 +696,72 @@
     "        #print(f\"accuracy: {round(accuracy, 3)*100}%\")\n",
     "    return accuracies\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the evaluation on 9 different k-counts and get the accuracies for each (this should take about 10min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________\n",
+      "running knn with k=1\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k1' written\n",
+      "__________________________\n",
+      "running knn with k=2\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k2' written\n",
+      "__________________________\n",
+      "running knn with k=4\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k4' written\n",
+      "__________________________\n",
+      "running knn with k=8\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k8' written\n",
+      "__________________________\n",
+      "running knn with k=16\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k16' written\n",
+      "__________________________\n",
+      "running knn with k=32\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k32' written\n",
+      "__________________________\n",
+      "running knn with k=64\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k64' written\n",
+      "__________________________\n",
+      "running knn with k=128\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k128' written\n",
+      "__________________________\n",
+      "running knn with k=256\n",
+      "creating segmented pointcloud...\n",
+      "file 'South-Building_k256' written\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = run_evaluation(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Don't run this. It takes too long"
    ]
   },
   {
@@ -805,11 +903,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "Ignore this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
     "# without normalization\n",
     "accuracies_no_weight_no_normalization = [0.8277244236408146, 0.8374626745218303, 0.843085034837113, 0.8450488257606327, 0.8501600624108896, 0.8554327065343126, 0.8577193124041643, 0.8516665321604391, 0.8417937750517849]\n",
     "accuracies_linear_weitht_no_normalization = [0.8277244236408146, 0.8327011540634331, 0.8387539343071584, 0.8421703924891722, 0.8456944556532967, 0.8524466682807414, 0.8567239663196407, 0.8578538186318027, 0.8546256691684825]\n",
@@ -825,7 +939,8 @@
     "accuracies_absolute_linear = [{'tree': 0.8279797125950972, 'building': 0.9765157149007789, 'signboard': 0.2533783783783784, 'railing': 0.09554140127388536, 'ashbin': 0.0, 'sidewalk': 0.6122715404699739, 'streetlight': 0.5617021276595745, 'stairway': 0.6826347305389222, 'person': 0.7083333333333334}, {'tree': 0.8354818258664413, 'building': 0.9783944577087166, 'signboard': 0.28040540540540543, 'railing': 0.05732484076433121, 'ashbin': 0.0, 'sidewalk': 0.6044386422976501, 'streetlight': 0.548936170212766, 'stairway': 0.6826347305389222, 'person': 0.6666666666666666}, {'tree': 0.8473161453930684, 'building': 0.9803123409918196, 'signboard': 0.28716216216216217, 'railing': 0.05732484076433121, 'ashbin': 0.0, 'sidewalk': 0.5822454308093995, 'streetlight': 0.574468085106383, 'stairway': 0.688622754491018, 'person': 0.6666666666666666}, {'tree': 0.8601014370245139, 'building': 0.981095150495127, 'signboard': 0.32094594594594594, 'railing': 0.03184713375796178, 'ashbin': 0.0, 'sidewalk': 0.5169712793733682, 'streetlight': 0.5574468085106383, 'stairway': 0.7045908183632734, 'person': 0.4583333333333333}, {'tree': 0.8777472527472527, 'building': 0.9825824885514111, 'signboard': 0.34121621621621623, 'railing': 0.006369426751592357, 'ashbin': 0.0, 'sidewalk': 0.47389033942558745, 'streetlight': 0.6127659574468085, 'stairway': 0.7125748502994012, 'person': 0.4166666666666667}, {'tree': 0.8852493660185968, 'building': 0.9844220908841833, 'signboard': 0.3108108108108108, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.4073107049608355, 'streetlight': 0.6340425531914894, 'stairway': 0.7145708582834331, 'person': 0.0}, {'tree': 0.8956043956043956, 'building': 0.9850874789619946, 'signboard': 0.3108108108108108, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.3772845953002611, 'streetlight': 0.5617021276595745, 'stairway': 0.6766467065868264, 'person': 0.0}, {'tree': 0.8924344885883347, 'building': 0.9863008336921211, 'signboard': 0.3108108108108108, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.33159268929503916, 'streetlight': 0.2, 'stairway': 0.6307385229540918, 'person': 0.0}, {'tree': 0.867603550295858, 'building': 0.9867705193941054, 'signboard': 0.12837837837837837, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.32114882506527415, 'streetlight': 0.20851063829787234, 'stairway': 0.564870259481038, 'person': 0.0}]\n",
     "accuracies_absolute_linear = [0.9102036424286445, 0.9131896806822156, 0.9173593737390041, 0.9199418933096603, 0.9250531299599172, 0.9264788959728836, 0.927985365722433, 0.9241653888575041, 0.915664595270761]\n",
     "accuracies_absolute_normal = [0.9013800338955693, 0.9100691362010062, 0.9160412127081484, 0.9189465472251366, 0.9247303150135852, 0.9265057972184112, 0.9279584644769053, 0.9252414386786109, 0.9180319048771958]\n",
-    "accuracies_absolute_d_square = [0.9013800338955693, 0.9101767411831168, 0.9159605089715653, 0.9191348559438302, 0.9249724262233341, 0.9266134022005219, 0.9283619831598203, 0.9248917224867511, 0.915180372851263]"
+    "accuracies_absolute_d_square = [0.9013800338955693, 0.9101767411831168, 0.9159605089715653, 0.9191348559438302, 0.9249724262233341, 0.9266134022005219, 0.9283619831598203, 0.9248917224867511, 0.915180372851263]\n",
+    "'''"
    ]
   },
   {
@@ -834,6 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# giving it a structure I can plot\n",
     "k_runs_per_label = {}\n",
     "for k_run in accuracies_labels_weighted:\n",
@@ -842,26 +958,34 @@
     "            k_runs_per_label[label] += [accuracy]\n",
     "        else:\n",
     "            k_runs_per_label[label] = [accuracy]\n",
-    "print(k_runs_per_label)"
+    "print(k_runs_per_label)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Graph"
+    "### Graph Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run this code to visualize the the accuracy of the algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8665/3759191795.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_38456/1355215899.py:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  plt.gca().set_yticklabels([f'{x:.0%}' for x in plt.gca().get_yticks()])\n"
      ]
     }
@@ -880,8 +1004,8 @@
     "# Add `aling='center'` to center bars on ticks\n",
     "#for label, accuracies in k_runs_per_label.items():\n",
     "#    p1 = plt.plot(ind, accuracies, label=label, color=[i/255 for i in colors[label]])\n",
-    "plt.plot(ind, accuracies, label=\"Regular KNN\")\n",
-    "plt.plot(ind, accuracies_weighted, label=\"Linear Weighted KNN\")\n",
+    "plt.plot(ind, acc, label=\"Regular KNN\")\n",
+    "#plt.plot(ind, accuracies_weighted, label=\"Linear Weighted KNN\")\n",
     "plt.legend()\n",
     "plt.xlabel('k-Count')\n",
     "plt.ylabel('Accuracy')\n",
@@ -914,19 +1038,42 @@
     "'''\n",
     "\n",
     "\n",
-    "plt.savefig(title+\".svg\", dpi=500)"
+    "plt.savefig(title+\".svg\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Table"
+    "### Table Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot a wonderfully colorful table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies_labels = [{'tree': 0.8072696534234995, 'building': 0.9729930721358957, 'signboard': 0.19594594594594594, 'railing': 0.12101910828025478, 'ashbin': 0.0, 'sidewalk': 0.6031331592689295, 'streetlight': 0.5063829787234042, 'stairway': 0.6606786427145709, 'person': 0.7916666666666666}, {'tree': 0.8285080304311073, 'building': 0.9766722768014404, 'signboard': 0.24324324324324326, 'railing': 0.07006369426751592, 'ashbin': 0.0, 'sidewalk': 0.6122715404699739, 'streetlight': 0.5957446808510638, 'stairway': 0.6846307385229541, 'person': 0.7083333333333334}, {'tree': 0.8402366863905325, 'building': 0.9805080433676465, 'signboard': 0.25675675675675674, 'railing': 0.05732484076433121, 'ashbin': 0.0, 'sidewalk': 0.6005221932114883, 'streetlight': 0.5872340425531914, 'stairway': 0.6766467065868264, 'person': 0.6666666666666666}, {'tree': 0.8556635672020287, 'building': 0.9809385885944656, 'signboard': 0.27702702702702703, 'railing': 0.01910828025477707, 'ashbin': 0.0, 'sidewalk': 0.5430809399477807, 'streetlight': 0.5531914893617021, 'stairway': 0.6986027944111777, 'person': 0.5}, {'tree': 0.8794378698224852, 'building': 0.9819953814239305, 'signboard': 0.3344594594594595, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.4595300261096606, 'streetlight': 0.6212765957446809, 'stairway': 0.7065868263473054, 'person': 0.5416666666666666}, {'tree': 0.8872569737954353, 'building': 0.9836784218560414, 'signboard': 0.30405405405405406, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.3681462140992167, 'streetlight': 0.7021276595744681, 'stairway': 0.720558882235529, 'person': 0.0}, {'tree': 0.900570583262891, 'building': 0.9831304552037262, 'signboard': 0.3108108108108108, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.30678851174934724, 'streetlight': 0.7531914893617021, 'stairway': 0.6806387225548902, 'person': 0.0}, {'tree': 0.8877852916314455, 'building': 0.9848917765861678, 'signboard': 0.3108108108108108, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.16318537859007834, 'streetlight': 0.3574468085106383, 'stairway': 0.6427145708582834, 'person': 0.0}, {'tree': 0.849323753169907, 'building': 0.9847352146855063, 'signboard': 0.0, 'railing': 0.0, 'ashbin': 0.0, 'sidewalk': 0.08224543080939947, 'streetlight': 0.0425531914893617, 'stairway': 0.4750499001996008, 'person': 0.0}]\n",
+    "k_runs_per_label = {}\n",
+    "for k_run in accuracies_labels:\n",
+    "    for label, accuracy in k_run.items():\n",
+    "        if label in k_runs_per_label:\n",
+    "            k_runs_per_label[label] += [accuracy]\n",
+    "        else:\n",
+    "            k_runs_per_label[label] = [accuracy]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,8 +1123,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing Different KNN weights"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
